docs/grammar.txt
EBNF
----
Module
    = StmtList
    .

StmtList
    = { Statement }
    .

Statement
    = Declaration
    | Assignment
    | CallStmt
    | RETURN
    .

Declaration
    = [ AttributeList ]
    ( DIM
    | DECLARE
    | FUNCTION
    | SUB
    )
    .

AttributeList
    = "[" Attribute { ","  Attribute } "]"
    .

Attribute
    = IdentExpr [ AttributeArgList ]
    .

AttributeArgList
    = "=" Literal
    | "(" [ Literal { "," Literal } ] ")"
    .

DIM
    = "DIM" identifier
    ( "=" Expression
    | "AS" TypeExpr [ "=" Expression ]
    )
    .

DECLARE
    = "DECLARE" FuncSignature
    .

FuncSignature
    = "FUNCTION" id [ "(" [ FuncParamList ] ")" ] "AS" TypeExpr
    | "SUB" id [ "(" FuncParamList ")" ]
    .

FuncParamList
    = FuncParam { "," FuncParam } [ "," "..." ]
    | "..."
    .

FuncParam
    = id "AS" TypeExpr
    .

TypeExpr
    = id
    .
